fixed pmd:BooleanInstantiation
SVN-Revision: 15505